--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,14 +2,17 @@ name: Security
 
 on: [push, pull_request]
 
+env:
+  SCARB_VERSION: 2.3.1
+
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: software-mansion/setup-scarb@v1.3
+      - uses: actions/checkout@v4
+      - uses: software-mansion/setup-scarb@v1.3.2
         with:
-          scarb-version: "0.7.0"
+          scarb-version: ${{ env.SCARB_VERSION }}
 
       - name: Install Semgrep
         run: |
@@ -17,7 +20,7 @@ jobs:
       - name: Run Semgrep
         run: semgrep --config https://github.com/avnu-labs/semgrep-cairo-rules/releases/download/v0.0.1/cairo-rules.yaml ./src > semgrep-output.txt
       - name: Save Semgrep Output as an Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: semgrep-cairo
           path: semgrep-output.txt
