--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,17 +3,17 @@ name: Test
 on: [push, pull_request]
 
 env:
-  SCARB_VERSION: 0.7.0
-  STARKNET_FOUNDRY_VERSION: 0.6.0
+  SCARB_VERSION: 2.3.1
+  STARKNET_FOUNDRY_VERSION: 2.3.1
 
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: software-mansion/setup-scarb@v1
+      - uses: actions/checkout@v4
+      - uses: software-mansion/setup-scarb@v1.3.2
         with:
-          scarb-version: "0.7.0"
+          scarb-version: ${{ env.SCARB_VERSION }}
       # - name: Set up Scarb
       #ses: software-mansion/setup-scarb@v1
       # Install Scarb from a nightly release
@@ -24,5 +24,5 @@ jobs:
       #   sudo mv scarb-v${SCARB_VERSION}-x86_64-unknown-linux-gnu/bin/scarb /usr/local/bin
       - name: Install starknet foundry
         run: curl -L https://raw.githubusercontent.com/foundry-rs/starknet-foundry/master/scripts/install.sh | sh -s -- -v ${STARKNET_FOUNDRY_VERSION}
-      - name: Run cairo tests
-        run: snforge
+      - name: Run tests
+        run: snforge test
