--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,6 @@ on: [push, pull_request]
 
 env:
   SCARB_VERSION: 2.3.1
-  STARKNET_FOUNDRY_VERSION: 2.3.1
 
 jobs:
   check:
@@ -22,7 +21,8 @@ jobs:
       #   wget https://github.com/software-mansion/scarb-nightlies/releases/download/${NIGHTLY_DATE}/scarb-${NIGHTLY_DATE}-x86_64-unknown-linux-gnu.tar.gz
       #   tar -xvf scarb-${NIGHTLY_DATE}-x86_64-unknown-linux-gnu.tar.gz
       #   sudo mv scarb-v${SCARB_VERSION}-x86_64-unknown-linux-gnu/bin/scarb /usr/local/bin
-      - name: Install starknet foundry
-        run: curl -L https://raw.githubusercontent.com/foundry-rs/starknet-foundry/master/scripts/install.sh | sh -s -- -v ${STARKNET_FOUNDRY_VERSION}
-      - name: Run tests
+      - uses: foundry-rs/setup-snfoundry@v1
+        with:
+          starknet-foundry-version: 0.9.0
+      - name: Run cairo tests
         run: snforge test
