--- a/Scarb.toml
+++ b/Scarb.toml
@@ -8,7 +8,7 @@ keywords = ["starknet", "defi", "syntethics"]
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = ">=2.3.1"
+starknet = "2.3.1"
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.11.0" }
 
 [[target.starknet-contract]]
