--- a/Scarb.toml
+++ b/Scarb.toml
@@ -11,6 +11,7 @@ keywords = ["starknet", "defi", "syntethics"]
 starknet = "2.4.0"
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.13.0" }
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.8.0" }
+pragma_lib = { git = "https://github.com/astraly-labs/pragma-lib"}
 
 [[target.starknet-contract]]
 sierra = true
